fix(md): blockquote width should collapse to content

--- a/src/styles/markdown/_md.css
+++ b/src/styles/markdown/_md.css
@@ -93,12 +93,15 @@
 }
 .md > p:hover a:hover { color: var(--md-link-hov-c); }
 
+.md blockquote { text-align: center; } /*  */
 .md blockquote > p {
   margin           : 2.7rem auto;
+  display          : inline-block;
   padding          : 8px 2.3rem 8px 2.5rem;
-  width            : 85%;
   color            : var(--md-bq-c);
+  max-width        : 85%;
   font-size        : 1.4rem;
+  text-align       : left;
   background-color : var(--md-bq-bg-c);
   quotes           : '“' '”';
   border           : 4px solid var(--md-bq-bdr-c);
